style.css
* {
  margin: 0;
  padding: 0;
}


html {
  font-family: Arial, sans-serif; 
  font-size: 16px; 
  margin: 30px;
  background-color: #272343;
  text-align: center;
}

h1 { 
  font-size: 2.0rem;
  text-transform:uppercase;
  line-height: 70px;
}

.author {
   font-style: italic;
  font-weight: bold;
}

.quote {
  font-size: 1.5rem;
  line-height: 35px;
  margin-bottom: 5px;
}

.qimage{
   border-radius: 20px 20px 0px 0px;
  width: 100%; 
  height: auto; 
}

.qtext{
  background-color: #3da9fc;
 border-radius: 0px 0px 20px 20px;
  color: #fffffe;
  padding: 10px 15px;
  height: auto;
  width: 400px;
  text-align: center;
}

 

